# Heart-Disease

./: .gitignore  README.md  pyproject.toml
notebook/: analise.ipynb
src/: data_loader.py
